Food Item Optimization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,17 @@ spring.application.name=FitHealthAPI
 logging.level.fit.health.fithealthapi=INFO
 spring.devtools.restart.enabled=false
 
+# H2 Database Configuration for Persistent Storage in User's Home Directory
+spring.datasource.url=jdbc:h2:~/fithealthapi;AUTO_SERVER=TRUE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
+# Enable H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
